--- a/composer.json
+++ b/composer.json
@@ -42,7 +42,8 @@
         "php": "^7.0.0"
     },
     "require-dev": {
-        "phpunit/phpunit": "^6.0.0"
+        "phpunit/phpunit": "^6.0.0",
+        "codedungeon/phpunit-result-printer": "^0.4.0"
     },
     "autoload": {
         "files": [
