--- a/composer.json
+++ b/composer.json
@@ -66,6 +66,11 @@
     "extra": {
         "branch-alias": {
             "dev-master": "1.0-dev"
+        },
+        "laravel": {
+            "providers": [
+                "Rinvex\\Language\\Providers\\LanguageServiceProvider"
+            ]
         }
     },
     "minimum-stability": "dev",
